# fire-and-forget-2-recomp

./: .gitignore  README.md  build_wasm.sh
scripts/: extract_assets.sh
src/: CMakeLists.txt  HEADER_SPEC.md  demo.c  ff2.h  ff2_proto.h  ff2_tables.h  ff2_types.h  game_app.c  main.c
src/asset/: depack.c  ff_assets.h  ilbm.c
src/game/: behaviors.c  bg_layers.c  camera_faithful.c  cutscene.c  decor_ring.c  dgroup.c  display_init.c  entity_dispatch.c  entity_dispatch.h  entity_faithful.c  ff_game.h  frontend.c  game_main.c  gmem.h  gnames.h  gstate.h  hud_cockpit.c  keyboard.c  panel_text.c  path_vm.c  player_render.c  render_world.c  run_level.c  shape_gen.c  sound.c  sprite_dl.c  vm.c
src/game/data/: enemies.c  gamedata.h  misc.c  road.c  shapes.c  sound.c  ui.c  wave_data.c  wave_data.h
src/platform/: opl.c  platform.h  platform_sdl.c
src/render/: bob.c  ff_font.h  font.c
tools/: README.md  bob_extract.py  pp20_unpack.py  waveasm.py  wavedis.py
wave/: levels.wave
web/: shell.html
